feat: add. title and paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    
+  <h1 class="title">Meet our team</h1>
+  <div class="container"> 
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed unde perspiciatis impedit reiciendis laboriosam, asperiores magni laborum quam ab! Ut perferendis placeat dolorum nostrum reiciendis quis odit veniam possimus?</p>
+  </div> 
 </body>
 </html>
