feat: add. images-text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
          <img src="./assets/male1.png" alt="">
         </div>
         <div class="generality">
-
+         <div class="name">
+          <h3 class="h3">FRANCO BIANCHI</h3>
+          <div class="work">Designer</div>
+          <div class="mail">francobianchi@team.com</div> 
+         </div>
         </div>
        </div> 
       </div>
@@ -34,7 +38,11 @@
          <img src="./assets/female1.png" alt="">
         </div>
         <div class="generality">
-
+         <div class="name">   
+          <h3 class="h3">LAURA ROSSI</h3>
+         </div>
+         <div class="work">Front-end Developer</div>
+         <div class="mail">laurarossi@team.com</div>
         </div>
        </div> 
       </div>
@@ -45,7 +53,11 @@
          <img src="./assets/male2.png" alt="">
         </div>
         <div class="generality">
-          
+         <div class="name">   
+          <h3 class="h3">GIORGIO VERDI</h3>
+         </div>
+         <div class="work">Back-end Developer</div>
+         <div class="mail">giorgioverdi@team.com</div> 
         </div>
        </div> 
       </div>
@@ -58,18 +70,26 @@
         <img src="./assets/female2.png" alt="">
         </div>
         <div class="generality">
-  
+         <div class="name">   
+          <h3 class="h3">MARTA IPSUM</h3>
+         </div>
+         <div class="work">Seo Specialist</div>
+         <div class="mail">martaipsum@team.com</div>
         </div>
        </div> 
       </div>
         
-      <div class="col1-3 second">
+      <div class="col1-3">
        <div class="card clearfix">
         <div class="image">
          <img src="./assets/male3.png" alt="">
         </div>
         <div class="generality">
-  
+         <div class="name">   
+          <h3 class="h3">ROBERTO LOREM</h3>
+         </div>
+         <div class="work">Project Manager</div>
+         <div class="mail">robertolorem@team.com</div>
         </div>
        </div> 
       </div>
@@ -80,7 +100,11 @@
          <img src="./assets/female3.png" alt="">
         </div>
         <div class="generality">
-  
+         <div class="name">   
+          <h3 class="h3">DANIELA AMET</h3>
+         </div>
+         <div class="work">Analist</div>
+         <div class="mail">danielaamet@team.com</div>
         </div>
        </div> 
       </div>
